# ssimulacra2

./: .gitignore  CHANGELOG.md  Cargo.lock.MSRV  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
benches/: benches.rs
src/: blur.rs  lib.rs
src/blur/: gaussian.rs  mod.rs
src/blur/gaussian_impl/: gaussian.rs  mod.rs
src/blur/libblur_impl/: mod.rs
ssimulacra2/: Cargo.toml
ssimulacra2_bin/: Cargo.toml  README.md
test_data/: tank_distorted.jxl  tank_source.jxl
