[package]
name = "ssimulacra2"
version = "0.4.0"
edition = "2021"
rust-version = "1.65.0"
description = "Rust implementation of the SSIMULACRA2 metric"
repository = "https://github.com/rust-av/ssimulacra2"
homepage = "https://github.com/rust-av/ssimulacra2"
documentation = "https://docs.rs/ssimulacra2"
exclude = ["test_data"]
license = "BSD-2-Clause"

[features]
default = ["rayon"]

[dependencies]
aligned = "0.4.1"
nalgebra = "0.32.2"
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "1.0.56"
wide = "0.7.5"
yuvxyb = "0.3.0"

[dev-dependencies]
criterion = "0.4.0"
image = "0.24.4"
rand = "0.8.5"

[[bench]]
name = "benches"
harness = false
