[package]
name = "ssimulacra2"
version = "0.5.0"
edition = "2021"
description = "Rust implementation of the SSIMULACRA2 metric"
repository = "https://github.com/rust-av/ssimulacra2"
homepage = "https://github.com/rust-av/ssimulacra2"
documentation = "https://docs.rs/ssimulacra2"
exclude = ["test_data"]
license = "BSD-2-Clause"

# When changing MSRV: Also update README and .github/workflows/rust.yml
rust-version = "1.65.0"

[features]
default = ["rayon"]

[dependencies]
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "1.0.56"
yuvxyb = "0.4.1"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
criterion = "0.5.0"
image = "0.24.4"
rand = "0.8.5"

[[bench]]
name = "benches"
harness = false
